--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">Will you go out with me?</h2>
+        <h2 class="question">Annu i love you </h2>
         <img class="gif" alt="gif" src="https://media.giphy.com/media/FTGah7Mx3ss04PcasF/giphy.gif"/>
         <div class="btn-group">
-            <button class="yes-btn">Yes</button>
+            <button class="yes-btn">i ❤️ u too</button>
             <button class="no-btn">No</button>
         </div>
     </div>
