--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">Alfred Babe i love you </h2>
+        <h2 class="question">Nisha Babe i love you </h2>
         <img class="gif" alt="gif" src="https://media.giphy.com/media/FTGah7Mx3ss04PcasF/giphy.gif"/>
         <div class="btn-group">
             <button class="yes-btn">i ❤️ u too</button>
